<resources>
    <string name="app_name">Football Steps</string>

    <string name="menu_create_career_button">New Career</string>

    <string name="create_career_header">New Career</string>
    <string name="create_career_team_button">Team Mode</string>
    <string name="create_career_team_info">In Team Mode you create your own club and start in League 2. The entire team\'s performance is decided by your activity.\nYou must stay with your club, but in a successful career you could also represent your national team!</string>
    <string name="create_career_player_button">Player Mode</string>
    <string name="create_career_player_info">In Player Mode you create your own player and sign for your favourite club.\nOnly your player\'s performance is decided by your activity, and you will be playing with 10 AI controlled players in your team.\nAs a player, you will be subject to transfer offers, and in a successful career you could also represent your national team!</string>
    <string name="create_career_target_button"> Target Mode</string>
    <string name="create_career_target_info">In Target Mode your performance will be judged against a target you\'ve chosen.
        Even as you move up the leagues you will only be judged against your target.</string>
    <string name="create_career_scaled_button"> Scaled Mode</string>
    <string name="create_career_scaled_info">In Scaled Mode your performance will be judged depending on the team you\'re facing.
        As you move up the leagues you will need to do more activity to meet expectations.</string>
    <string name="create_career_confirm_button">Start Career</string>

    <string name="create_team_header">New Offline Team</string>
    <string name="create_team_team_name_hint">Team Name</string>
    <string name="create_team_confirm_button">Create Team</string>
    <string name="create_team_steps_header">Target Steps</string>
    <string name="create_team_thousands_text">,000</string>

    <string name="team_menu_fixtures_button">Fixtures</string>
    <string name="team_menu_results_button">Results</string>

    <string name="tm_fixtures_header">Upcoming Fixtures</string>
    <string name="tm_fixtures_confirm_button">Done</string>
    <string name="tm_fixtures_view_fixture_button">View Fixture</string>

    <string name="fixture_item_step_header">Step Target</string>
    <string name="fixture_item_default_score">N/A</string>
    <string name="fixture_item_VS">VS</string>

    <string name="fixture_detail_header">Fixture Details</string>
    <string name="fixture_detail_step_target">Target</string>
    <string name="fixture_detail_step_steps">steps</string>
    <string name="fixture_detail_decrease_button">- Target</string>
    <string name="fixture_detail_increase_button">+ Target</string>
    <string name="fixture_detail_confirm_button">Save Fixture</string>
    <string name="fixture_detail_play_match">Play Match</string>




    <string name="position_in_league">%1s in %2s</string>

    <string name="first_name_hint">First Name</string>
    <string name="surname_hint">Surname</string>
    <string name="create_offline_player_button">Create Player</string>
    <string name="continue_offline_player_button">Continue with %1$s %2$s</string>
    <string name="main_menu_name">%1s %2s</string>
    <string name="main_menu_appearances_header">Apps</string>
    <string name="main_menu_saves_header">Saves</string>
    <string name="main_menu_conceded_header">Cncd</string>
    <string name="main_menu_tackles_header">Tckls</string>
    <string name="main_menu_passes_header">Pass</string>
    <string name="main_menu_assists_header">Assts</string>
    <string name="main_menu_goals_header">Gls</string>
    <string name="main_menu_offsides_header">Offsd</string>
    <string name="main_menu_matches_button">Matches</string>

    <string name="match_performance_header">Performance</string>
    <string name="steps">steps</string>
    <string name="play_next_match_button">Play Next Match</string>

</resources>
