<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fixture_detail_header"
        style="@style/default_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fixture_detail_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/fixtureDetailHomeLeagueList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:foregroundGravity="center"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixture_detail_header" />

    <TextView
        android:id="@+id/fixture_detail_home_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixtureDetailHomeLeagueList" />

    <TextView
        android:id="@+id/fixture_detail_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fixture_item_VS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixture_detail_home_team" />

    <TextView
        android:id="@+id/fixture_detail_away_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixture_detail_vs" />

    <ListView
        android:id="@+id/fixtureDetailAwayLeagueList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixture_detail_away_team" />

    <TextView
        android:id="@+id/fixtureDetailStepNumber"
        style="@style/default_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixtureDetailAwayLeagueList" />

    <Button
        android:id="@+id/fixtureDetailDecreaseSteps"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fixture_detail_decrease_button"
        app:layout_constraintEnd_toStartOf="@+id/fixture_detail_vs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixtureDetailStepNumber" />

    <Button
        android:id="@+id/fixtureDetailIncreaseSteps"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fixture_detail_increase_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fixture_detail_vs"
        app:layout_constraintTop_toBottomOf="@+id/fixtureDetailStepNumber" />

    <Button
        android:id="@+id/fixtureDetailConfirmButton"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fixture_detail_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixtureDetailDecreaseSteps" />

    <TextView
        android:id="@+id/fixtureDetailSteps"
        style="@style/default_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/fixture_detail_step_steps"
        app:layout_constraintBottom_toBottomOf="@+id/fixtureDetailStepNumber"
        app:layout_constraintStart_toEndOf="@+id/fixtureDetailStepNumber"
        app:layout_constraintTop_toTopOf="@+id/fixtureDetailStepNumber" />

    <TextView
        android:id="@+id/fixtureDetailStepTarget"
        style="@style/default_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/fixture_detail_step_target"
        app:layout_constraintBottom_toBottomOf="@+id/fixtureDetailStepNumber"
        app:layout_constraintEnd_toStartOf="@+id/fixtureDetailStepNumber"
        app:layout_constraintTop_toTopOf="@+id/fixtureDetailStepNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>