<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/createTeamCentreDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createTeamHeader"
        style="@style/default_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_team_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createTeamTeamName"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="center"
        android:hint="@string/create_team_team_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTeamHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_cream_soda"
            android:gravity="center"
            android:hint="@string/create_team_team_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/createTeamColourSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTeamTeamName" />

    <Spinner
        android:id="@+id/createTeamStepsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="right"
        app:layout_constraintStart_toEndOf="@+id/createTeamCentreDivider"
        app:layout_constraintTop_toBottomOf="@+id/createTeamColourSpinner" />

    <TextView
        android:id="@+id/createTeamThousandsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/create_team_thousands_text"
        app:layout_constraintBottom_toBottomOf="@+id/createTeamStepsSpinner"
        app:layout_constraintStart_toEndOf="@+id/createTeamStepsSpinner"
        app:layout_constraintTop_toTopOf="@+id/createTeamStepsSpinner" />

    <TextView
        android:id="@+id/createTeamStepsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/create_team_steps_header"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/createTeamStepsSpinner"
        app:layout_constraintEnd_toStartOf="@+id/createTeamStepsSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createTeamStepsSpinner" />

    <Button
        android:id="@+id/createTeamConfirmButton"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/create_team_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTeamThousandsText" />
</androidx.constraintlayout.widget.ConstraintLayout>